[package]
name = "esp32-idf-ledbar-example"
version = "0.1.0"
authors = ["Tolga Caglayan"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
anyhow = "1.0"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1.0"
